-Add Thymeleaf dialects to the cmenu.html

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -38,7 +38,7 @@ html,body
 }
 
 .navbar{
-	background-image: url("titlebg.jpeg");
+	background-image: url("/img/titlebg.jpeg");
 	height: 100px;
 	background-position: center;
 	background-size: cover;	
