--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -6,12 +6,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/style.css}" href="../../css/style.css" />
 
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Stick&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" th:href="@{https://fonts.gstatic.com}">
+    <link th:href="@{https://fonts.googleapis.com/css2?family=Stick&family=Ubuntu:wght@400;500;700&display=swap}" rel="stylesheet">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <title>Menu</title>
 </head>
@@ -32,10 +32,10 @@
         <p class="h3 text-center td-txt">Today's Deals</p>
         <div class="row td d-flex justify-content-center">
             <div class="col td-container">
-                <img src="tm1.jpeg" alt="..." class="td-item">
+                <img th:src="@{/img/tm1.jpeg}" alt="..." class="td-item">
             </div>
             <div class="col">
-                <img src="tm2.jpeg" alt="..." class="td-item">
+                <img th:src="@{/img/tm2.jpeg}" alt="..." class="td-item">
             </div>
         </div>
     </section>
@@ -118,7 +118,7 @@
                             <img src="https://images.wagjag.com/images/deals/84-off-at-burger-king-759322-regular.jpg" alt="..." class="rounded-circle cat_item_img">
                         </div>
                         <div class="col">
-                            <img src="https://i.dlpng.com/static/png/7261703_preview.png" alt="..." class="rounded-circle cat_item_img">
+                            <img th:src="@{https://i.dlpng.com/static/png/7261703_preview.png}" alt="..." class="rounded-circle cat_item_img">
                         </div>
                     </div>
 
