--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -76,29 +76,29 @@
 
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <div class="row " style="color: #0d5d38 !important;">
-                                <div class="col item_img">
-                                    <img src="https://burgerking.lt/images/optimized/products/whopper-desktop-94537c472ebdcbf7bf6ff3a6259a496a.png" alt="..." class="rounded-circle cat_item_img">
+                                <div class="col-4 item_img">
+                                    <img src="https://burgerking.lt/images/optimized/products/bacon-king-desktop-c675c75f01a1b2f4a89b17a23456e109.png" alt="..." class="rounded-circle cat_item_img">
                                 </div>
-                                <div class="col-6 item_text_container">
+                                <div class="col-5 item_text_container">
                                     Burger
                                     <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
                                 </div>
-                                <div class="col item-price">
+                                <div class="col-3 item-price">
                                     <ul class="list-group">
                                         <li class="list-group-item item_counter">
 								 <span class="input-group-prepend">
-										<button type="button" class="btn btn-outline-secondary btn-number plus-minus-btn" disabled="disabled" data-type="minus" data-field="quant[1]">
-											<span class="fa fa-minus"></span>
+										<button type="button" class="btn btn-outline-danger rounded-circle btn-number plus-minus-btn" disabled="disabled" data-type="minus" data-field="quant[1]">
+											−
 										</button>
 									</span>
-                                            <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                                            <input type="text" name="quant[1]" class="form-control input-number item_quan" value="1" min="1" max="10">
                                             <span class="input-group-append">
-										<button type="button" class="btn btn-outline-secondary btn-number plus-minus-btn" data-type="plus" data-field="quant[1]">
-											<span class="fa fa-plus"></span>
+										<button type="button" class="btn btn-outline-success rounded-circle btn-number plus-minus-btn" data-type="plus" data-field="quant[1]">
+											+
 										</button>
 									</span>
                                         </li>
-                                        <li class="list-group-item price">Eur 3.00</li>
+                                        <li class="list-group-item price text-center">€ 3.00</li>
                                     </ul>
                                 </div>
                             </div>
@@ -107,13 +107,70 @@
 
 
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Dapibus ac facilisis in
-                            <span class="badge badge-primary badge-pill">2</span>
+                            <div class="row " style="color: #0d5d38 !important;">
+                                <div class="col-4 item_img">
+                                    <img src="https://burgerking.lt/images/optimized/products/whopper-desktop-94537c472ebdcbf7bf6ff3a6259a496a.png" alt="..." class="rounded-circle cat_item_img">
+                                </div>
+                                <div class="col-5 item_text_container">
+                                    Burger
+                                    <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
+                                </div>
+                                <div class="col-3 item-price">
+                                    <ul class="list-group">
+                                        <li class="list-group-item item_counter">
+								 <span class="input-group-prepend">
+										<button type="button" class="btn btn-outline-danger rounded-circle btn-number plus-minus-btn" disabled="disabled" data-type="minus" data-field="quant[1]">
+											−
+										</button>
+									</span>
+                                            <input type="text" name="quant[1]" class="form-control input-number item_quan" value="1" min="1" max="10">
+                                            <span class="input-group-append">
+										<button type="button" class="btn btn-outline-success rounded-circle btn-number plus-minus-btn" data-type="plus" data-field="quant[1]">
+											+
+										</button>
+									</span>
+                                        </li>
+                                        <li class="list-group-item price text-center">€ 3.00</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </li>
+
+
+
+
                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                            Morbi leo risus
-                            <span class="badge badge-primary badge-pill">1</span>
+                            <div class="row " style="color: #0d5d38 !important;">
+                                <div class="col-4 item_img">
+                                    <img src="https://burgerking.lt/images/optimized/products/chicken-tendercrisp-cheese-desktop-186d30751b3a595c45eefaee659853e6.png" alt="..." class="rounded-circle cat_item_img">
+                                </div>
+                                <div class="col-5 item_text_container">
+                                    Burger
+                                    <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
+                                </div>
+                                <div class="col-3 item-price">
+                                    <ul class="list-group">
+                                        <li class="list-group-item item_counter">
+								 <span class="input-group-prepend">
+										<button type="button" class="btn btn-outline-danger rounded-circle btn-number plus-minus-btn" disabled="disabled" data-type="minus" data-field="quant[1]">
+											−
+										</button>
+									</span>
+                                            <input type="text" name="quant[1]" class="form-control input-number item_quan" value="1" min="1" max="10">
+                                            <span class="input-group-append">
+										<button type="button" class="btn btn-outline-success rounded-circle btn-number plus-minus-btn" data-type="plus" data-field="quant[1]">
+											+
+										</button>
+									</span>
+                                        </li>
+                                        <li class="list-group-item price text-center">€ 3.00</li>
+                                    </ul>
+                                </div>
+                            </div>
                         </li>
+
+
+
                     </ul>
                 </div>
 
