--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -304,7 +304,8 @@
 
 
 
-
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script th:src="@{/js/cmenu.js}"></script>
 
 <!-- Optional JavaScript; choose one of the two! -->
 
