--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,10 +19,10 @@
 
 	<h1> Employee Login </h1>
 	<form>
-		<p> E-mail</p>
-		<input type="text" name="" placeholder="Enter E-mail">
-		<p> Password</p>
-		<input type="password" name="" placeholder="Enter Password">
+
+		<input type="text" name="" placeholder="E-mail">
+
+		<input type="password" name="" placeholder="Password">
 		<input type="submit" name="" value="Login">
 
 	</form>
