- Quantity of chosen items total price is reflected on "total tab" -Add getTotal function to the javascript file

--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -95,7 +95,7 @@
                                                 +
                                             </button>
                                         </li>
-                                        <li class="list-group-item price text-center">€ 3.00</li>
+                                        <li class="list-group-item price text-center">€ <span id="2">4.00</span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -123,7 +123,7 @@
                                                 +
                                             </button>
                                         </li>
-                                        <li class="list-group-item price text-center">€ 3.00</li>
+                                        <li class="list-group-item price text-center">€ <span id="3">5.10</span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                                 +
                                             </button>
                                         </li>
-                                        <li class="list-group-item price text-center">€ 3.00</li>
+                                        <li class="list-group-item price text-center">€ <span id="1">3.00</span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -272,7 +272,7 @@
                 <p class="h5" style="font-size: 1.50rem;">Total</p>
             </div>
             <div class="col" style="padding: 1%;">
-                EUR&nbsp;<span>3.00</span>
+                EUR&nbsp;<span id="tot">0</span>
             </div>
         </div>
     </button>
