--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,30 +4,21 @@
 <head>
 	<meta charset="UTF-8">
 	<title>E-menu Employee - Login Page</title>
-	<link rel="stylesheet" type="text/css" href="lStyle.css">
+	<link rel="stylesheet" type="text/css" href="loginstyle.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Stick&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+	<script src="loginjs.js"></script>
 </head>
 <body>
-
-
-
-<h2 class="header_bs">
-	BLACKSTAR </h2>
-
+<h2 class="header_bs">BLACKSTAR </h2>
 <div class="loginbox">
-
 	<h1> Employee Login </h1>
-	<form>
-
-		<input type="text" name="" placeholder="E-mail">
-
+	<form id ="form" onsubmit="return validation()">
+		<input type="text" name="" placeholder="E-mail" id="email">
 		<input type="password" name="" placeholder="Password">
 		<input type="submit" name="" value="Login">
-
+		<span id="error1"></span>
 	</form>
 </div>
-
 </body>
-
 </html>
