--- a/src/main/resources/templates/loginstyle.css
+++ b/src/main/resources/templates/loginstyle.css
@@ -9,7 +9,6 @@ body {
 
 }
 
-
 .loginbox{
     width: 420px;
     height: 490px;
@@ -28,7 +27,6 @@ body {
 .logo{
     width: 130px;
     height: 130px;
-
     position: absolute;
     top: -50px;
     left: calc(50% - 50px);
@@ -45,16 +43,11 @@ h1{
 .header_bs{
     font-family: 'Stick', sans-serif;
     color:white !important;
-
     text-shadow: 6px 4px 0px rgb(0 0 0);
-
     color: peru;
     padding: 0 80px ;
     text-align: center;
     font-size: 90px ;
-
-
-
 }
 
 .loginbox p{
@@ -73,9 +66,7 @@ h1{
 
 .loginbox input[type= "text"], input[type ="password"]
 {
-
     border-bottom: 3px solid #975737;
-
     outline: none;
     height: 40px;
     color: #501d03;
@@ -95,6 +86,12 @@ h1{
 
 }
 
-
+#error1{
+	font-family: "Ubuntu";
+	display:block;
+	font-weight:700;
+	text-align:center;
+	padding:5px;
+}
 
 
