--- a/src/main/resources/templates/loginstyle.css
+++ b/src/main/resources/templates/loginstyle.css
@@ -11,18 +11,11 @@ body {
 
 .loginbox{
     width: 420px;
-    height: 490px;
     background: white;
-    color: #D4A017;
-    top: 50%;
-    left: 50%;
-    position: absolute;
+    margin: auto;
     border-radius:5%;
-    transform: translate(-50%,-50%);
     box-sizing: border-box;
-    padding: 80px 30px;
-
-
+    padding: 25px 30px;
 }
 .logo{
     width: 130px;
@@ -35,8 +28,7 @@ body {
 h1{
     font-family: "Ubuntu";
     color: #975737;
-    margin: 0;
-    padding: 0 0 80px;
+    margin-bottom: 20px;
     text-align: center;
     font-size: 40px ;
 }
@@ -44,10 +36,10 @@ h1{
     font-family: 'Stick', sans-serif;
     color:white !important;
     text-shadow: 6px 4px 0px rgb(0 0 0);
-    color: peru;
     padding: 0 80px ;
     text-align: center;
     font-size: 90px ;
+	margin: 12px 0;
 }
 
 .loginbox p{
@@ -76,14 +68,21 @@ h1{
 .loginbox input[type = "submit"]
 {
     border : black;
-    position: center;
     outline: black;
     height: 40px;
     background: #975737;
     color: white;
     font-size: 18px;
     border-radius: 10px ;
-
+	-webkit-transition: all 0.7s;
+	-moz-transition: all 0.7s;
+	transition: all 0.7s;
+}
+.loginbox input[type = "submit"]:hover{
+	background-color: #633822;
+	-webkit-transition: all 0.7s;
+	-moz-transition: all 0.7s;
+	transition: all 0.7s;
 }
 
 #error1{
@@ -93,5 +92,3 @@ h1{
 	text-align:center;
 	padding:5px;
 }
-
-
