--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -50,11 +50,11 @@
 
     <div class="accordion accordion-flush category_container" id="accordionFlushExample">
 
-        <div class="accordion-item categories">
+        <th:block th:each="cat: ${categories}" class="accordion-item categories">
             <div class="accordion-header" id="flush-heading1">
                 <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse1" aria-expanded="false" aria-controls="flush-collapse1">
 
-                    <p class="h6 text-center">BURGER</p>
+                    <p class="h6 text-center">[[${categories.ct_name}]]</p>
                     <div class="row tm">
                         <div class="col">
                             <img src="https://burgerking.lt/images/optimized/products/bacon-king-desktop-c675c75f01a1b2f4a89b17a23456e109.png" alt="..." class="rounded-circle cat_item_img">
@@ -66,12 +66,10 @@
                             <img src="https://burgerking.lt/images/optimized/products/chicken-tendercrisp-cheese-desktop-186d30751b3a595c45eefaee659853e6.png" alt="..." class="rounded-circle cat_item_img">
                         </div>
                     </div>
-
                 </div>
             </div>
+
             <div id="flush-collapse1" class="accordion-collapse collapse category_iteam" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-
-
                 <div class="accordion-body">
                     <ul class="list-group">
 
@@ -100,167 +98,11 @@
                                 </div>
                             </div>
                         </li>
-
-
-
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <div class="row " style="color: #0d5d38 !important;">
-                                <div class="col-4 item_img">
-                                    <img src="https://burgerking.lt/images/optimized/products/whopper-desktop-94537c472ebdcbf7bf6ff3a6259a496a.png" alt="..." class="rounded-circle cat_item_img">
-                                </div>
-                                <div class="col-5 item_text_container">
-                                    Burger
-                                    <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
-                                </div>
-                                <div class="col-3 item-price">
-                                    <ul class="list-group">
-                                        <li class="list-group-item item_counter">
-                                            <button type="button" class="btn btn-outline-danger rounded-circle plus-minus-btn dec">
-                                                −
-                                            </button>
-                                            <input type="number" class="form-control item_quan" value="0" min="1" max="10" name="qty" id="2">
-                                            <button type="button" class="btn btn-outline-success rounded-circle plus-minus-btn inc">
-                                                +
-                                            </button>
-                                        </li>
-                                        <li class="list-group-item price text-center">€ <span id="3">5.10</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-
-
-
-
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
-                            <div class="row " style="color: #0d5d38 !important;">
-                                <div class="col-4 item_img">
-                                    <img src="https://burgerking.lt/images/optimized/products/chicken-tendercrisp-cheese-desktop-186d30751b3a595c45eefaee659853e6.png" alt="..." class="rounded-circle cat_item_img">
-                                </div>
-                                <div class="col-5 item_text_container">
-                                    Burger
-                                    <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
-                                </div>
-                                <div class="col-3 item-price">
-                                    <ul class="list-group">
-                                        <li class="list-group-item item_counter">
-                                            <button type="button" class="btn btn-outline-danger rounded-circle plus-minus-btn dec">
-                                                −
-                                            </button>
-                                            <input type="number" class="form-control item_quan" value="0" min="1" max="10" name="qty" id="3">
-                                            <button type="button" class="btn btn-outline-success rounded-circle plus-minus-btn inc">
-                                                +
-                                            </button>
-                                        </li>
-                                        <li class="list-group-item price text-center">€ <span id="1">3.00</span></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </li>
-
-
-
                     </ul>
                 </div>
-
             </div>
-        </div>
+        </th:block>
 
-        <div class="accordion-item categories">
-            <div class="accordion-header" id="flush-heading2">
-                <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse2" aria-expanded="false" aria-controls="flush-collapse2">
-
-                    <p class="h6 text-center">COMBO</p>
-                    <div class="row tm">
-                        <div class="col ">
-                            <img src="https://www.pngjoy.com/pngm/420/7701609_combo-burger-king-whopper-men-transparent-png.png" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://images.wagjag.com/images/deals/84-off-at-burger-king-759322-regular.jpg" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img th:src="@{https://i.dlpng.com/static/png/7261703_preview.png}" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div id="flush-collapse2" class="accordion-collapse collapse category_iteam" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-            </div>
-        </div>
-
-        <div class="accordion-item categories">
-            <div class="accordion-header" id="flush-heading3">
-                <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse3" aria-expanded="false" aria-controls="flush-collapse3">
-
-                    <p class="h6 text-center">BUCKET</p>
-                    <div class="row tm">
-                        <div class="col ">
-                            <img src="https://www.kupony-burger-king.ru/content/images/menyu/king-buket-bolshoy-miks.png" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRPRDZY53sR9cZcZqy_YBGSvD088ucBahUmUg&usqp=CAU" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://www.kupony-burger-king.ru/content/images/menyu/king-buket-krylyshki-xxl.png" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div id="flush-collapse3" class="accordion-collapse collapse category_iteam" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-            </div>
-        </div>
-
-        <div class="accordion-item categories">
-            <div class="accordion-header" id="flush-heading4">
-                <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse4" aria-expanded="false" aria-controls="flush-collapse4">
-
-                    <p class="h6 text-center">DRINK</p>
-                    <div class="row tm">
-                        <div class="col ">
-                            <img src="https://5.imimg.com/data5/VB/AV/HQ/SELLER-49520187/mountain-dew-cold-drink-500x500.jpg" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://assets.sainsburys-groceries.co.uk/gol/7900749/1/640x640.jpg" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://images.heb.com/is/image/HEBGrocery/002657526" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div id="flush-collapse4" class="accordion-collapse collapse category_iteam" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-            </div>
-        </div>
-
-        <div class="accordion-item categories">
-            <div class="accordion-header" id="flush-heading5">
-                <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse5" aria-expanded="false" aria-controls="flush-collapse5">
-
-                    <p class="h6 text-center">DESSERT</p>
-                    <div class="row tm">
-                        <div class="col ">
-                            <img src="https://www.burgerking.co.nz/sites/default/files/03156-1%20Sweets_ProductSilo_300x270px_CR-R.png" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://www.burgerking.com.sg/upload/image/Category/8/menu-thumb-sweets.jpg" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                        <div class="col">
-                            <img src="https://www.burgerking.co.nz/sites/default/files/sundaes-lg_0.png" alt="..." class="rounded-circle cat_item_img">
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-            <div id="flush-collapse5" class="accordion-collapse collapse category_iteam" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
-            </div>
-        </div>
 
     </div>
 </div>
