--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -50,11 +50,11 @@
 
     <div class="accordion accordion-flush category_container" id="accordionFlushExample">
 
-        <th:block th:each="cat: ${categories}" class="accordion-item categories">
+        <div th:each="cat: ${categories}" class="accordion-item categories">
             <div class="accordion-header" id="flush-heading1">
                 <div class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#flush-collapse1" aria-expanded="false" aria-controls="flush-collapse1">
 
-                    <p class="h6 text-center">[[${categories.ct_name}]]</p>
+                    <p class="h6 text-center">[[${cat.ct_name}]]</p>
                     <div class="row tm">
                         <div class="col">
                             <img src="https://burgerking.lt/images/optimized/products/bacon-king-desktop-c675c75f01a1b2f4a89b17a23456e109.png" alt="..." class="rounded-circle cat_item_img">
@@ -73,14 +73,16 @@
                 <div class="accordion-body">
                     <ul class="list-group">
 
-                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                        <li class="list-group-item d-flex justify-content-between align-items-center"
+                            th:each="item, it: ${items}"
+                            th:if="${cat.ctID == item.category.ctID}">
                             <div class="row " style="color: #0d5d38 !important;">
-                                <div class="col-4 item_img">
-                                    <img src="https://burgerking.lt/images/optimized/products/bacon-king-desktop-c675c75f01a1b2f4a89b17a23456e109.png" alt="..." class="rounded-circle cat_item_img">
+                                <div class="col-4 item_img rounded-circle ">
+                                    <img src="https://burgerking.lt/images/optimized/products/bacon-king-desktop-c675c75f01a1b2f4a89b17a23456e109.png" alt="..." class="cat_item_img">
                                 </div>
                                 <div class="col-5 item_text_container">
-                                    Burger
-                                    <p class="item_text">A hamburger is a sandwich consisting of one or more cooked patties of ground meat, usually beef, placed inside a sliced bread roll or bun.</p>
+                                    [[${item.it_name}]]
+                                    <p class="item_text">[[${item.description}]]</p>
                                 </div>
                                 <div class="col-3 item-price">
                                     <ul class="list-group">
@@ -88,12 +90,12 @@
                                             <button type="button" class="btn btn-outline-danger rounded-circle plus-minus-btn dec">
                                                 −
                                             </button>
-                                            <input type="number" class="form-control item_quan" value="0" min="1" max="10" name="qty" id="1">
+                                            <input th:type="number" class="form-control item_quan" th:value="0" th:min="1"  th:max="10" th:name="qty" th:id="${it.count}">
                                             <button type="button" class="btn btn-outline-success rounded-circle plus-minus-btn inc">
                                                 +
                                             </button>
                                         </li>
-                                        <li class="list-group-item price text-center">€ <span id="2">4.00</span></li>
+                                        <li class="list-group-item price text-center">€ <span id="2">[[${item.price}]]</span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -101,7 +103,7 @@
                     </ul>
                 </div>
             </div>
-        </th:block>
+        </div>
 
 
     </div>
