--- a/src/main/resources/templates/cmenu.html
+++ b/src/main/resources/templates/cmenu.html
@@ -44,7 +44,9 @@
     </section>
 </section>
 
-
+<div class="text-center">
+    <h2>TABLE [[${table.number}]]</h2>
+</div>
 
 <div class="cat-container-overall container-fluid ">
 
