--- a/src/main/resources/static/css/order.css
+++ b/src/main/resources/static/css/order.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('./back.jpeg');
+  background-image: url('/img/back.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
