--- a/src/main/resources/templates/amenu.html
+++ b/src/main/resources/templates/amenu.html
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org" >
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -10,21 +11,23 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 	<link href="admenu.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/admenu.css}" href="../../css/admenu.css" />
     <title>Admin/menu</title>
   </head>
+
   <body>
     <div class="first d-flex justify-content-between align-items-center">
       <div class="img">
            <span class="my-link" id="bs-text">BLACKSTAR</span>
       </div>
       <div>
-        <a href="" class="my-link">ORDERS</a>
+        <a th:href="@{adminO}" class="my-link">ORDERS</a>
         <a href="" class="my-link my-link-activa">MENU</a>
       </div>
     </div>
    
 
-        <div id="list" class="" style="overflow-y:auto;>
+        <div id="list" class="" style="overflow-y:auto;">
             <div class="s-row">
             <div class="row uprow">
             <div class="col-2">
@@ -99,9 +102,7 @@
             <button class="my_btn btn-success" id="add-btn">Add</button>
           </div>	
         </div>
-		  
-          
-
+        </div>
 
         <div id="add"  class="d-none">
           <button id="exit" class="btn-danger">X</button>
@@ -151,22 +152,8 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", () => {
-        var add = document.getElementById('add');
-        var list = document.getElementById('list');
-        var add_btn = document.getElementById('add-btn');
-        var exit_btn = document.getElementById('exit');
+          <script th:src="@{/js/amenu.js}"></script>
 
-        add_btn.onclick = () => {
-          add.classList.remove('d-none');
-          list.classList.add('d-none');
-        }
-        exit_btn.onclick = () => {
-          add.classList.add('d-none');
-          list.classList.remove('d-none');
-        }
-      })
-    </script>
+
   </body>
 </html>
