--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -1,5 +1,6 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+	  xmlns:th="http://www.thymeleaf.org" >
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,7 +9,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Stick&family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-	<link href="order.css" rel="stylesheet">
+
+	  <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/order.css}" href="../../css/order.css" />
     <title>Admin/Order</title>
 	
   </head>
@@ -19,7 +21,7 @@
       </div>
       <div>
         <a href="" class="my-link my-link-activa">ORDERS</a>
-        <a href="" class="my-link">MENU</a>
+        <a th:href="@{adminM}"  class="my-link">MENU</a>
       </div>
     </div>
    
@@ -134,6 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     
-	<script src="order.js"></script>
+
+	<script th:src="@{/js/order.js}"></script>
   </body>
 </html>
