--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -181,3 +181,11 @@ html,body
     border-bottom: 3px solid #000000f0 !important;
     margin: 0px 9px;
 }
+
+.innc{
+    font-size: 10px !important;
+
+}
+.itan{
+    display:none !important;
+}
