--- a/src/main/resources/static/css/loginstyle.css
+++ b/src/main/resources/static/css/loginstyle.css
@@ -1,7 +1,7 @@
 body {
     margin:0;
     padding: 0;
-    background: url(backemen.jpg);
+    background-image: url("/img/backemen.jpg");
     background-size: cover;
     background-position: initial;
     background-repeat: no-repeat;
